# GASTLI

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  README.md  README.rst  meson.build  pyproject.toml  requirements.txt  setup.py  test_Coupling.py  test_GASTLI.py  test_Thermal_evolution.py
.github/workflows/: draft-pdf.yml
Examples/: HAT-P-26b_thermal_seq_tutorial.py  HAT-P-26b_thermal_solve_tutorial.py  Jupiter_MRrel_plot_tutorial.py  Jupiter_MRrel_tutorial.py  Jupiter_metal_content.py  Jupiter_metal_content_tutorial.py  Jupiter_profiles.py  Jupiter_profiles_tutorial.py  Jupiter_thermal_evolution_step1.py  Jupiter_thermal_evolution_step2.py  complete_thermal_curve_tutorial.py  convergence_tutorial.py  psurf_tutorial.py  water_phase_tutorial.py
GASTLI/: GASTLI.py  GASTLI_interior.f95  Thermal_evolution.py  launcher.ba  mod_funcmazevet.f95  mod_modEOS.f95
GASTLI/Input/: layer1.in  layer2.in
docs/: requirements.txt
docs/JOSS/: paper.bib  paper.md
docs/source/: api.rst  atm_grid.ipynb  atm_grid.rst  conf.py  contributing.rst  convergence.ipynb  convergence.rst  index.rst  installation.rst  int_atm_object.rst  linux_install.rst  macos_arm64_install.rst  macos_intel_install.rst  retrieval.ipynb  retrieval.rst  test_suite.rst  thermal_evol.ipynb  thermal_evol.rst  tutorial.rst
docs/source/_static/: int_atm_object.ipynb
gastli_input_data/Input/: layer3.in
src/: Coupling.py  GASTLI.py  GASTLI_interior.f95  Guillot10.py  Thermal_evolution.py  atm_models_interp.py  fort_input.f95  fort_spec.f90  fort_spec_func.f90  mod_constants.f95  mod_dimensions.f95  mod_funcmazevet.f95  mod_functions.f95  mod_mazevet.f95  mod_modEOS.f95  mod_parameters.f95  mod_subroutines.f95  radius_hse.py  water_curves.py
src/Input/: constants.in
src/Input/Atmospheric data/: CO_055_grid.hdf5
src/Input/Chabrier/: HG23_Vmix_Smix.csv
test/: Psurf1000_profiles_test.py  Psurf1000_thermalevol.py  Psurf10_profiles_test.py  Psurf10_thermalevol.py  debug_10bar_interior_profiles.py  test_1.py  test_Coupling.py  test_GASTLI.py  test_Thermal_evolution.py  test_adjust_pow_law.py  test_atm_models_interp.py  test_for_interior_module.py  test_for_thermalevol_module.py  test_for_thermalevol_module_part2.py  test_foratm_module.py  test_foratm_module_10bar.py  test_foratm_module_10bar_forplot.py  test_foratm_module_debug.py  test_foratm_module_debug_forplot.py  thermalevol_DEBUG.py  thermalevol_DEBUG_part2.py  thermalevol_DEBUG_part3.py
