
[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python >=0.15.0",
    "numpy >= 1.25.0"
]

[project]
name = "gastli"
version = "0.9.0"
requires-python = ">= 3.10"
dependencies = [
    "numpy >= 1.25.0",
    "pandas >= 2.0.3",
    "scipy >= 1.11.1",
    "h5py >= 3.10.0",
    "matplotlib >= 3.7.2",
    "pytest >= 8.2.2"
]
