
[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python >=0.15.0",
    "numpy >= 1.25.0",
    "ninja"
]

[project]
name = "gastli"
version = "1.0.0"
description = "The GAS gianT modeL for Interiors"
repository = "https://github.com/lorenaacuna/GASTLI"
documentation = "https://gastli.readthedocs.io/en/latest/"
authors = [
    {name = "Lorena Acuna", email = "acuna@mpia.de"},
]
readme = "README.rst"
license = {file = "LICENSE"}
dependencies = [
    "numpy >= 1.25.0",
    "pandas >= 2.0.3",
    "scipy >= 1.11.1",
    "h5py >= 3.10.0",
    "matplotlib >= 3.7.2",
    "pytest >= 8.2.2"
]
